feat(user): Add update resources endpoint
