# src/objects/Resources.ts
@@ -1,0 +1,8 @@
+export default interface Resources {
+  gold: number,
+  crystal: number,
+  wood: number,
+  rock: number,
+  cord: number,
+  daarunEye: number
+}
